--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="img/logo.svg">
+              <img src="logo.svg">
             </div>
              <p class="text-contents">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, velit animi aliquam voluptatibus nesciunt quisquam alias asperiores, neque quas modi facilis, pariatur saepe omnis earum ipsam aperiam corporis id repellat? </p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src=img/logo2.svg>
+              <img src=logo2.svg>
             </div>
             <p class="text-contents">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad dolorum quas sint eos architecto veritatis quasi, fuga sapiente officiis ea minima reprehenderit aspernatur nulla cum provident harum ipsum nam delectus?</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="img/logo3.svg">
+              <img src="logo3.svg">
             </div>
             <p class="text-contents">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis eum dolore fugit earum. Perspiciatis, nostrum libero beatae deleniti quam necessitatibus facere eligendi. Consequatur iure quibusdam magni facilis earum ipsum magnam.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="img/logo4.svg">
+              <img src="logo4.svg">
             </div>
             <p class="text-contents">Lorem ipsum dolor, sit amet consectetur adipisicing elit. In corrupti consequuntur eum tenetur doloribus sapiente atque quos sit quis neque. Illum, labore odit delectus eveniet sequi minima iusto repellendus perspiciatis.</p>
           </div>
